# cookiecutter_sample_9

./: .env.example  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: test.yml
apps/: example.py
notebooks/: demo-colab-streamlit.ipynb
tests/: test_model.py
