[tool.poetry]
name = "cookiecutter_sample_9"
version = "0.1.0"
description = "Some description."
authors = ["Tomoaki Nakamura <nakamura213tomoaki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
streamlit = "^0.72.0"
smart_open = {extras = ["all"], version = "^4.0.1"}

[tool.poetry.dev-dependencies]
typer = "^0.3.2"
comet_ml = "^3.2.9"
jupyterlab = "^2.2.9"
pytest = "^6.2.1"
pytest-profiling = "^1.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
tensorboard = "^2.4.1"
isort = {extras = ["toml"], version = "^5.7.0"}


[tool.pytest.ini_options]
python_paths = "./"

[tool.isort]
known_first_party = "cookiecutter_sample_9"
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
